# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-05-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add another cloudi_service_db_pgsql test case to show driver differences

2014-05-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Cleanup cloudi_service_db_pgsql
        * Move the old epgsql wg driver modules/application/header
          so that its prefix is epgsql_wg
        * Add the semiocast pgsql driver
        * Add a common internal output format for both drivers
          (default to off, see internal_interface configuration,
           based on the semiocast attempt at supporting odbc)
        * Add more tests which use both drivers with the common internal
          output format
    * Update uuid

2014-05-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Improve the error return types for the modules:
      cloudi, cloudi_service and cloudi_service_api
    * Fix a cloudi_service_init error for recv_asyncs function calls

2014-05-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add application dependencies to the release manually which
      reltool fails to find (syntax_tools, cloudi_x_lager, cloudi_x_goldrush)
    * Update the Erlang Binary Term Format for the new types in 17.0

2014-04-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix automatic stopping of an internal service's application when
      the application_name service configuration option is used
    * Add more logging output when a service is stopped

2014-04-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg
    * Fix error on CLOUDI_CORE_STANDALONE external service configuration

2014-04-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update cpg
    * Simplify FUNCTION macro

2014-04-17 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Make the 17.0 dict:dict() type usage more specific

2014-04-16 Michael Truog   <mjtruog [at] gmail (dot) com>
